# thesis

./: .gitignore  README.md
code/: .gitignore  COPYING  Makefile.am  configure.ac  runningtimes
code/data/large/: A.txt  F.txt  H.txt  c.txt  ff.txt  set2.xml  x_L.txt  x_U.txt
code/data/small/: A.txt  F.txt  c.txt  set1.xml  x_L.txt  x_U.txt
code/data/vlarge/: ResF.txt  b_U.txt  c.txt  x_0.txt  x_L.txt  x_U.txt
code/include/: dynarray.hpp  matrix.hpp  qp.hpp
code/include/coin/: ClpCholeskyBase.hpp  ClpConfig.h  ClpModel.hpp  ClpSolve.hpp  CoinFinite.hpp  CoinHelperFunctions.hpp  CoinMessageHandler.hpp  CoinUtilsConfig.h  config_clp.h  config_coinutils.h
code/include/format/: xml.hpp
code/include/slp/: .Algorithm.hpp.swp  Algorithm.hpp  Good.hpp  Tree.hpp
code/lib/: libClp.la  libClp.so.0.0.0  libCoinUtils.la  libCoinUtils.so.0.0.0  libOsi.la  libOsiClp.la  libOsiClp.so.0.0.0  libOsiCommonTests.la
code/src/: Main.cpp
code/src/slp/: Algorithm.cpp  Good.cpp  Tree.cpp
text/: appendix.tex  notes.tex  presentation.tex  projectdescription.tex  thesis.bib  thesis.tex
text/include/: checkmod_algo.tex  construct_algo.tex  construct_b1.tex  construct_incb.tex  coordinatedescent.tex  delta.tex  delta3d.bak  delta3d.tex  eps4instances.tex  find_algo.tex  find_algo2.tex  histH.tex  histH.tex.bak  lpback.tex  maptreeq.tex  maptreesets.tex  maptreesets.tex.bak  maptreesets2.tex  maptreesets3.tex  maptreesets4.tex  maptreesets5.tex  mfind_algo.tex  newhistH.tex  newhistHonly.tex  qpback.tex  setmem.tex  setspeed.tex  slp_algo.tex  slpfirst.tex  slpfourth.tex  (+6 more)
(+33 files in other folders)
